# mai_python_data_enrichment

./: .gitignore  pyproject.toml
app/: config.py
app/core/: __init__.py  data_loader.py  database.py  mapper.py
app/data_parsers/: __init__.py
app/example/: main.py
app/example/data/: data.csv  data.py
app/example/db/: __init__.py  db.py  info_table.py  init_db.py
