[tool.poetry]
name = "python_course"
version = "0.1.0"
description = ""
authors = ["Nikita Tomchik"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.19"
requests = "^2.24.0"
cx_Oracle = "^8.0.1"

[tool.poetry.dev-dependencies]
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.0.0"
flake8-docstrings = "^1.5.0"
flake8-fixme = "^1.1.1"
flake8-pep3101 = "^1.3.0"
flake8-polyfill = "^1.0.2"
flake8-comprehensions = "^3.2.3"
flake8-bandit = "^2.1.2"
mypy = "^0.782"
ipython = "^7.18.1"
sqlalchemy-stubs = "^0.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
